Changed 1.9.0 to 2.0.0 in integration poms