@@ -23,7 +23,7 @@ under the License.
     <parent>
         <artifactId>integration</artifactId>
         <groupId>org.wso2.am</groupId>
-        <version>2.0.0-SNAPSHOT</version>
+        <version>2.0.0</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
@@ -39,6 +39,11 @@ under the License.
                 <inherited>false</inherited>
                 <configuration>
                     <argLine>-Xmx1024m -XX:PermSize=256m -XX:MaxPermSize=512m</argLine>
+                            <!--<argLine>-Xms512m -Xmx1024m -XX:MaxPermSize=128m -Xmx1024m -XX:PermSize=256m
+                        -XX:MaxPermSize=512m -Xdebug -Xnoagent -Djava.compiler=NONE
+                        -Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=5006
+                    </argLine>-->
+                    <skipTests>${skipUiTests}</skipTests>
                     <suiteXmlFiles>
                         <suiteXmlFile>src/test/resources/testng-server-mgt.xml</suiteXmlFile>
                         <suiteXmlFile>src/test/resources/testng.xml</suiteXmlFile>
@@ -277,6 +282,15 @@ under the License.
             <artifactId>org.wso2.carbon.integration.common.utils</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.wso2.carbon.automationutils</groupId>
+            <artifactId>org.wso2.carbon.integration.common.admin.client</artifactId>
+            <version>${carbon.automationutils.version}</version>
+        </dependency>
     </dependencies>
+
+    <properties>
+        <skipUiTests>true</skipUiTests>
+    </properties>
 
 </project>
